k8s/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caalbert
  labels:
    app: caalbert
spec:
  replicas: 1
  selector:
    matchLabels:
      app: caalbert
  template:
    metadata:
      labels:
        app: caalbert
    spec:
      containers:
        - name: caalbert
          image: wil42/playground:v1
          ports:
            - containerPort: 8888
