k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: caalbert-service
spec:
  selector:
    app: caalbert
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
