k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: caalbert-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: dev
spec:
  rules:
    # Gerenic rule for all paths
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: caalbert-service
                port:
                  number: 8080
